# quaternion_operation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: BloomRelease.yaml  ROS2-Dashing.yaml  ROS2-Foxy.yaml  ROS2-Galactic.yaml  Release.yaml  main.yml  release.yaml
doc/: .gitignore  conf.py  manifest.yaml
include/quaternion_operation/: quaternion_operation.h  quaternion_operation.hpp
src/: quaternion_operation.cpp
test/src/: test_quaternion_operation.cpp
