<?xml version="1.0"?>
<package format="3">
  <name>quaternion_operation</name>
  <version>0.0.3</version>
  <description>The quaternion_operation package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <!--<build_depend>rostest</build_depend>-->
  <build_depend>eigen</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <!--<build_export_depend>rostest</build_export_depend>-->
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <!--<exec_depend>rostest</exec_depend>-->
  <exec_depend>eigen</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
